--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^5.3.3",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
+    "react-hook-form": "^7.51.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
